--- a/.github/workflows/jd_necklace.yml
+++ b/.github/workflows/jd_necklace.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_bean_change
+name: jd_necklace
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '10 0,20 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: bean_change
+    types: jd_necklace
 jobs:
   build:
 
@@ -35,16 +35,16 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【京豆变动通知】'
+      - name: '运行 【点点券】'
         run: |
-          random_time=$(($RANDOM % 10))
+          random_time=$(($RANDOM % 15))
           echo "等待 ${random_time} 分钟后开始执行"
           for((i=1; i<=${random_time}; i++));  
           do
             echo "倒计时 $[${random_time}-$i] 分钟"
             sleep 1m
           done
-          node jd_bean_change.js
+          node jd_necklace.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
