--- a/.github/workflows/jd_jdzz.yml
+++ b/.github/workflows/jd_jdzz.yml
@@ -1,14 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_joy_steal1
+name: jd_zz赚赚
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '32 22 * * *'
+    - cron: '08 17,2 * * *'
+  watch:
+    types: started
   repository_dispatch:
-    types: jd_joy_steal
+    types: jd_zz赚赚
 jobs:
   build:
 
@@ -19,7 +21,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: hajiuhajiu/jdsign1112
-          ref: master
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -34,16 +35,20 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行jd_joy_steal'
+      - name: '运行jd_zz'
         run: |
-          node jd_joy_steal.js
+          # random_time=$(($RANDOM % 20))
+          # echo "等待 ${random_time} 分钟后开始执行"
+          # for((i=1; i<=${random_time}; i++));  
+          # do
+          # echo "倒计时 $[${random_time}-$i] 分钟"
+          #  sleep 1m
+          # done
+          node jd_jdzz.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          QQ_SKEY: ${{ secrets.QQ_SKEY }}
-          QQ_MODE: ${{ secrets.QQ_MODE }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
@@ -51,4 +56,3 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-
